# Learning

CMake/calculator/: CMakeLists.txt
CMake/calculator/lib/: CMakeLists.txt
CMake/calculator/lib/log/: log.hpp
CMake/calculator/lib/math/: division.cpp  math.hpp
CMake/module1_calculator/: CMakeLists.txt  README.md  calculator.cpp
CMake/module1_calculator/lib/log/: CMakeLists.txt  log.cpp
CMake/module1_calculator/lib/log/src/: log.cpp
CMake/module1_calculator/lib/math/: CMakeLists.txt
CMake/module1_calculator/lib/math/include/: division.hpp
CMake/module1_calculator/lib/math/src/: addition.cpp  division.cpp
CMake/module2_cmake_script/: README.md  file.txt  lists.txt  strings.txt
CMake/module3/: README.md  conditional.txt  functions.txt  loops.txt  macros_vs_functions.txt
Docker/: README.md  arm-gcc.Dockerfile  centos.Dockerfile
Docker/Jenkins/: README.md
Docker/Ubuntu/: Dockerfile
